--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 24
@@ -23,4 +25,13 @@ def supportLibraryVersion = "24.0.0"
 dependencies {
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
     compile "com.android.support.constraint:constraint-layout:1.0.0-alpha3"
+    compile 'com.jakewharton.timber:timber:4.1.2'
+    compile "com.jakewharton:butterknife:8.1.0"
+    apt 'com.jakewharton:butterknife-compiler:8.1.0'
+    compile('com.twitter.sdk.android:twitter-core:1.6.8@aar') {
+        transitive = true;
+    }
+    compile('com.twitter.sdk.android:tweet-ui:1.10.3@aar') {
+        transitive = true;
+    }
 }
