--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.medo.tweetspie"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="com.medo.tweetspie"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".MainApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="66fba544d440464b418707e3ca3af95e535e051f"
+            />
+
+        <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.onboarding.OnboardingActivity"/>
+
+        <service android:name=".service.TimelineService"/>
+
     </application>
 
 </manifest>
