--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,12 @@ def supportLibraryVersion = "24.0.0"
 dependencies {
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
     compile "com.android.support.constraint:constraint-layout:1.0.0-alpha4"
+
+    compile 'com.squareup:otto:1.3.8'
     compile 'com.jakewharton.timber:timber:4.1.2'
     compile "com.jakewharton:butterknife:8.2.0"
     apt 'com.jakewharton:butterknife-compiler:8.2.0'
+
     compile('com.twitter.sdk.android:twitter-core:1.7.0@aar') {
         transitive = true;
     }
