--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,9 @@ def supportLibraryVersion = "24.0.0"
 
 dependencies {
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
-    compile "com.android.support.constraint:constraint-layout:1.0.0-alpha4"
 
+    compile 'io.realm:android-adapters:1.2.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.jakewharton.timber:timber:4.1.2'
     compile "com.jakewharton:butterknife:8.2.0"
