--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,11 @@ android {
     }
 }
 
-def supportLibraryVersion = "24.1.1"
+def supportLibraryVersion = "24.2.0"
 
 dependencies {
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile "com.android.support:percent:$supportLibraryVersion"
 
     compile 'io.realm:android-adapters:1.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
