--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'io.realm:android-adapters:1.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup:otto:1.3.8'
+    compile 'com.github.chrisbanes:PhotoView:1.3.0'
     compile 'com.jakewharton.timber:timber:4.1.2'
     compile "com.jakewharton:butterknife:8.2.1"
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
