--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'android-apt'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "com.medo.tweetspie"
         minSdkVersion 21
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
 
@@ -25,24 +25,26 @@ android {
     }
 }
 
-def supportLibraryVersion = "24.2.0"
+def supportLibraryVersion = "25.0.0"
 
 dependencies {
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibraryVersion"
     compile "com.android.support:percent:$supportLibraryVersion"
 
-    compile 'io.realm:android-adapters:1.3.0'
+
+    compile 'io.realm:android-adapters:1.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup:otto:1.3.8'
-    compile 'com.github.chrisbanes:PhotoView:1.3.0'
-    compile 'com.jakewharton.timber:timber:4.1.2'
-    compile "com.jakewharton:butterknife:8.2.1"
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+    compile 'com.github.chrisbanes:PhotoView:1.3.1'
+    compile 'com.jakewharton.timber:timber:4.3.1'
+    compile "com.jakewharton:butterknife:8.4.0"
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
-    compile('com.twitter.sdk.android:twitter-core:1.7.0@aar') {
+    compile('com.twitter.sdk.android:twitter-core:2.1.0@aar') {
         transitive = true;
     }
-    compile('com.twitter.sdk.android:tweet-ui:1.11.1@aar') {
+    compile('com.twitter.sdk.android:tweet-ui:2.1.1@aar') {
         transitive = true;
     }
 
