--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,19 +28,23 @@ android {
 def supportLibraryVersion = "25.0.0"
 
 dependencies {
+    /* Support */
     compile "com.android.support:appcompat-v7:$supportLibraryVersion"
     compile "com.android.support:recyclerview-v7:$supportLibraryVersion"
     compile "com.android.support:percent:$supportLibraryVersion"
 
-
-    compile 'io.realm:android-adapters:1.4.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    /* Bus */
     compile 'com.squareup:otto:1.3.8'
+
+    /* Images */
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.chrisbanes:PhotoView:1.3.1'
-    compile 'com.jakewharton.timber:timber:4.3.1'
+
+    /* View Injection */
     compile "com.jakewharton:butterknife:8.4.0"
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
+    /* Twitter */
     compile('com.twitter.sdk.android:twitter-core:2.1.0@aar') {
         transitive = true;
     }
@@ -48,4 +52,12 @@ dependencies {
         transitive = true;
     }
 
+    /* Dagger 2 */
+    apt 'com.google.dagger:dagger-compiler:2.7'
+    compile 'com.google.dagger:dagger:2.7'
+    provided 'javax.annotation:jsr250-api:1.0'
+
+    /* Utils */
+    compile 'com.jakewharton.timber:timber:4.3.1'
+    compile 'io.realm:android-adapters:1.4.0'
 }
