Improve tweet media viewing experience
This commit replaces the old fragment dialog for media viewing with
a new immersive activity that properly displays multiple photos, gif
or starts a new intent for viewing videos.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     /* Utils */
     compile 'com.jakewharton.timber:timber:4.4.0'
     compile 'io.realm:android-adapters:1.4.0'
+    compile 'me.relex:circleindicator:1.2.2@aar'
 }
