--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dexOptions {
+        incremental true
+        javaMaxHeapSize "8g"
+    }
 }
 
-def supportLibraryVersion = "25.1.0"
+def supportLibraryVersion = "25.3.1"
 
 dependencies {
     /* Support */
@@ -41,24 +45,24 @@ dependencies {
     compile 'com.github.chrisbanes:PhotoView:1.3.1'
 
     /* View Injection */
-    compile "com.jakewharton:butterknife:8.4.0"
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile "com.jakewharton:butterknife:8.5.1"
+    apt 'com.jakewharton:butterknife-compiler:8.5.1'
 
     /* Twitter */
-    compile('com.twitter.sdk.android:twitter-core:2.1.0@aar') {
+    compile('com.twitter.sdk.android:twitter-core:2.3.1@aar') {
         transitive = true;
     }
-    compile('com.twitter.sdk.android:tweet-ui:2.1.1@aar') {
+    compile('com.twitter.sdk.android:tweet-ui:2.3.2@aar') {
         transitive = true;
     }
 
     /* Dagger 2 */
-    apt 'com.google.dagger:dagger-compiler:2.8'
-    compile 'com.google.dagger:dagger:2.8'
+    apt 'com.google.dagger:dagger-compiler:2.10'
+    compile 'com.google.dagger:dagger:2.10'
     provided 'javax.annotation:jsr250-api:1.0'
 
     /* Utils */
-    compile 'com.jakewharton.timber:timber:4.4.0'
-    compile 'io.realm:android-adapters:1.4.0'
+    compile 'com.jakewharton.timber:timber:4.5.1'
+    compile 'io.realm:android-adapters:2.0.0'
     compile 'me.relex:circleindicator:1.2.2@aar'
 }
