--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 apply plugin: 'android-apt'
 apply plugin: 'realm-android'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.medo.tweetspie"
         minSdkVersion 21
@@ -22,6 +23,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -61,4 +66,8 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.5.1'
     compile 'io.realm:android-adapters:2.0.0'
     compile 'me.relex:circleindicator:1.2.2@aar'
+}
+
+retrolambda {
+    javaVersion JavaVersion.VERSION_1_7
 }
