--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "com.medo.tweetspie"
         minSdkVersion 21
@@ -30,7 +30,7 @@ android {
     }
 }
 
-def supportLibraryVersion = "25.3.1"
+def supportLibraryVersion = "25.4.0"
 
 dependencies {
     /* Support */
@@ -42,24 +42,20 @@ dependencies {
     compile 'com.squareup:otto:1.3.8'
 
     /* Images */
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.github.chrisbanes:PhotoView:1.3.1'
 
     /* View Injection */
-    compile "com.jakewharton:butterknife:8.5.1"
-    apt 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile "com.jakewharton:butterknife:8.6.0"
+    apt 'com.jakewharton:butterknife-compiler:8.6.0'
 
     /* Twitter */
-    compile('com.twitter.sdk.android:twitter-core:2.3.1@aar') {
-        transitive = true;
-    }
-    compile('com.twitter.sdk.android:tweet-ui:2.3.2@aar') {
-        transitive = true;
-    }
+    compile 'com.twitter.sdk.android:twitter-core:3.0.0'
+    compile 'com.twitter.sdk.android:tweet-ui:3.0.0'
 
     /* Dagger 2 */
-    apt 'com.google.dagger:dagger-compiler:2.10'
-    compile 'com.google.dagger:dagger:2.10'
+    apt 'com.google.dagger:dagger-compiler:2.11'
+    compile 'com.google.dagger:dagger:2.11'
     provided 'javax.annotation:jsr250-api:1.0'
 
     /* Utils */
