Introduce service for fetching tweets
This commit also:
- updates the gradle configuration
- introduces local broadcasts extension functions
- adds error notification + channel for Oreo
- improves the naming for the modern app architecture

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,5 +26,7 @@
         </activity>
 
         <activity android:name=".onboarding.OnboardingActivity" />
+
+        <service android:name=".service.MainService" />
     </application>
 </manifest>
