--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'io.fabric'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.3"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.1"
     defaultConfig {
         applicationId "com.medo.tweetspie"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
@@ -29,7 +29,8 @@ android {
     }
 }
 
-def supportLibraryVersion = "26.1.0"
+def supportLibraryVersion = "27.0.2"
+def kotlinVersion = '1.2.0'
 
 dependencies {
     /* Support */
@@ -38,21 +39,22 @@ dependencies {
     implementation "com.android.support:percent:$supportLibraryVersion"
 
     /* Kotlin */
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-
-    /* Images */
-    implementation 'com.github.bumptech.glide:glide:4.2.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
-    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 
     /* Twitter */
     implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
-    implementation 'com.twitter.sdk.android:tweet-ui:3.1.1'
+    implementation("com.twitter.sdk.android:tweet-ui:3.1.1") {
+        exclude module: 'support-v4'
+        exclude module: 'appcompat-v7'
+        exclude module: 'recyclerview-v7'
+    }
 
     /* Dependency Injection */
-    compile 'org.koin:koin-android:0.5.2'
+    implementation("org.koin:koin-android:0.6.1") {
+        exclude module: 'appcompat-v7'
+        exclude module: 'kotlin-stdlib'
+    }
 
     /* Utils */
     implementation 'com.jakewharton.timber:timber:4.5.1'
-    implementation 'me.relex:circleindicator:1.2.2@aar'
 }
