--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:name=".MainApp"
-        android:allowBackup="false"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -17,7 +17,7 @@
             android:name="io.fabric.ApiKey"
             android:value="66fba544d440464b418707e3ca3af95e535e051f" />
 
-        <activity android:name=".main.MainActivity">
+        <activity android:name="com.medo.tweetspie.ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,8 +25,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".onboarding.OnboardingActivity" />
+        <activity android:name="com.medo.tweetspie.ui.onboarding.OnboardingActivity" />
 
-        <service android:name=".service.MainService" />
     </application>
 </manifest>
