--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '28.0.2'
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.medo.tweetspie"
         minSdkVersion 25
@@ -28,18 +29,14 @@ android {
     }
 }
 
-kotlin {
-    experimental {
-        coroutines "enable"
-    }
-}
-
-def androidXVersion = "1.0.0-rc01"
-def lifecycleVersion = "2.0.0-rc01"
-def kotlinVersion = "1.2.61"
-def coroutinesVersion = "0.25.0"
+def androidXVersion = "1.0.0"
+def lifecycleVersion = "2.0.0"
+def kotlinVersion = "1.3.0"
+def coroutinesVersion = "1.0.1"
 def twitterKitVersion = "3.3.0"
-def koinVersion = "0.9.3"
+def koinVersion = "1.0.2"
+def constraintVersion = "1.1.3"
+def roomVersion = "2.1.0-alpha02"
 
 dependencies {
     /* Support */
@@ -48,13 +45,18 @@ dependencies {
     implementation "com.google.android.material:material:$androidXVersion"
     implementation "androidx.core:core-ktx:$androidXVersion"
     implementation "androidx.fragment:fragment-ktx:$androidXVersion"
+    implementation "com.android.support.constraint:constraint-layout:$constraintVersion"
 
     /* Lifecycle */
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycleVersion"
 
+    /* Database */
+    implementation "androidx.room:room-runtime:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+
     /* Kotlin */
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
 
     /* Coroutines */
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
@@ -65,6 +67,10 @@ dependencies {
     implementation "com.twitter.sdk.android:tweet-ui:$twitterKitVersion"
 
     /* Dependency Injection */
-    implementation "org.koin:koin-android:$koinVersion"
-    implementation "org.koin:koin-android-architecture:$koinVersion"
+    implementation "org.koin:koin-androidx-scope:$koinVersion"
+    implementation "org.koin:koin-androidx-viewmodel:$koinVersion"
+    testImplementation "org.koin:koin-test:$koinVersion"
+
+    /* Test */
+    testImplementation "androidx.arch.core:core-testing:$lifecycleVersion"
 }
