--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            useProguard false
         }
     }
     compileOptions {
@@ -37,6 +37,7 @@ def twitterKitVersion = "3.3.0"
 def koinVersion = "1.0.2"
 def constraintVersion = "1.1.3"
 def roomVersion = "2.1.0-alpha02"
+def glideVersion = "4.8.0"
 
 dependencies {
     /* Support */
@@ -65,6 +66,10 @@ dependencies {
     /* Twitter */
     implementation "com.twitter.sdk.android:twitter-core:$twitterKitVersion"
     implementation "com.twitter.sdk.android:tweet-ui:$twitterKitVersion"
+
+    /* Images */
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
     /* Dependency Injection */
     implementation "org.koin:koin-androidx-scope:$koinVersion"
