--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 
 def androidXVersion = "1.0.0"
 def lifecycleVersion = "2.0.0"
-def kotlinVersion = "1.3.0"
+def kotlinVersion = "1.3.10"
 def coroutinesVersion = "1.0.1"
 def twitterKitVersion = "3.3.0"
 def koinVersion = "1.0.2"
@@ -41,10 +41,10 @@ def glideVersion = "4.8.0"
 
 dependencies {
     /* Support */
-    implementation "androidx.appcompat:appcompat:$androidXVersion"
+    implementation "androidx.appcompat:appcompat:1.0.2"
     implementation "androidx.recyclerview:recyclerview:$androidXVersion"
     implementation "com.google.android.material:material:$androidXVersion"
-    implementation "androidx.core:core-ktx:$androidXVersion"
+    implementation "androidx.core:core-ktx:1.0.1"
     implementation "androidx.fragment:fragment-ktx:$androidXVersion"
     implementation "com.android.support.constraint:constraint-layout:$constraintVersion"
 
