--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,53 +29,43 @@ android {
     }
 }
 
-def androidXVersion = "1.0.0"
-def lifecycleVersion = "2.0.0"
-def kotlinVersion = "1.3.10"
-def coroutinesVersion = "1.0.1"
-def twitterKitVersion = "3.3.0"
-def koinVersion = "1.0.2"
-def constraintVersion = "1.1.3"
-def roomVersion = "2.1.0-alpha02"
-def glideVersion = "4.8.0"
-
 dependencies {
     /* Support */
     implementation "androidx.appcompat:appcompat:1.0.2"
-    implementation "androidx.recyclerview:recyclerview:$androidXVersion"
-    implementation "com.google.android.material:material:$androidXVersion"
-    implementation "androidx.core:core-ktx:1.0.1"
-    implementation "androidx.fragment:fragment-ktx:$androidXVersion"
-    implementation "com.android.support.constraint:constraint-layout:$constraintVersion"
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
+    implementation "com.google.android.material:material:1.0.0"
+    implementation "androidx.core:core-ktx:1.0.2"
+    implementation "androidx.fragment:fragment-ktx:1.0.0"
+    implementation "com.android.support.constraint:constraint-layout:1.1.3"
 
     /* Lifecycle */
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.0.0"
 
     /* Database */
-    implementation "androidx.room:room-runtime:$roomVersion"
-    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation "androidx.room:room-runtime:2.1.0-beta01"
+    kapt "androidx.room:room-compiler:2.1.0-beta01"
 
     /* Kotlin */
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.31"
 
     /* Coroutines */
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1"
 
     /* Twitter */
-    implementation "com.twitter.sdk.android:twitter-core:$twitterKitVersion"
-    implementation "com.twitter.sdk.android:tweet-ui:$twitterKitVersion"
+    implementation "com.twitter.sdk.android:twitter-core:3.3.0"
+    implementation "com.twitter.sdk.android:tweet-ui:3.3.0"
 
     /* Images */
-    implementation "com.github.bumptech.glide:glide:$glideVersion"
-    kapt "com.github.bumptech.glide:compiler:$glideVersion"
+    implementation "com.github.bumptech.glide:glide:4.9.0"
+    kapt "com.github.bumptech.glide:compiler:4.9.0"
 
     /* Dependency Injection */
-    implementation "org.koin:koin-androidx-scope:$koinVersion"
-    implementation "org.koin:koin-androidx-viewmodel:$koinVersion"
-    testImplementation "org.koin:koin-test:$koinVersion"
+    implementation "org.koin:koin-androidx-scope:2.0.0"
+    implementation "org.koin:koin-androidx-viewmodel:2.0.0"
+    testImplementation "org.koin:koin-test:2.0.0"
 
     /* Test */
-    testImplementation "androidx.arch.core:core-testing:$lifecycleVersion"
+    testImplementation "androidx.arch.core:core-testing:2.0.1"
 }
