--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
     defaultConfig {
         applicationId "com.medo.tweetspie"
         minSdkVersion 25
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -43,15 +43,15 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:2.0.0"
 
     /* Database */
-    implementation "androidx.room:room-runtime:2.1.0-beta01"
-    kapt "androidx.room:room-compiler:2.1.0-beta01"
+    implementation "androidx.room:room-runtime:2.1.0"
+    kapt "androidx.room:room-compiler:2.1.0"
 
     /* Kotlin */
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.31"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.50'
 
     /* Coroutines */
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.2"
 
     /* Twitter */
     implementation "com.twitter.sdk.android:twitter-core:3.3.0"
@@ -62,9 +62,9 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:4.9.0"
 
     /* Dependency Injection */
-    implementation "org.koin:koin-androidx-scope:2.0.0"
-    implementation "org.koin:koin-androidx-viewmodel:2.0.0"
-    testImplementation "org.koin:koin-test:2.0.0"
+    implementation "org.koin:koin-androidx-scope:2.0.1"
+    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
+    testImplementation "org.koin:koin-test:2.0.1"
 
     /* Test */
     testImplementation "androidx.arch.core:core-testing:2.0.1"
