--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,6 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            useProguard false
         }
     }
     compileOptions {
@@ -36,6 +35,7 @@ dependencies {
     implementation "com.google.android.material:material:1.0.0"
     implementation "androidx.core:core-ktx:1.0.2"
     implementation "androidx.fragment:fragment-ktx:1.0.0"
+    implementation "androidx.preference:preference-ktx:1.0.0"
     implementation "com.android.support.constraint:constraint-layout:1.1.3"
 
     /* Lifecycle */
