--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion '29.0.2'
+    compileSdkVersion sdk_version
+    buildToolsVersion build_tools_version
     defaultConfig {
         applicationId "com.medo.tweetspie"
-        minSdkVersion 25
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion sdk_min_version
+        targetSdkVersion sdk_version
+        versionCode version_code
+        versionName version_name
 
         // set the twitter api keys into your global gradle.properties file
         buildConfigField("String", "TWITTER_KEY", "\"" + TWITTER_KEY + "\"")
@@ -29,43 +29,48 @@ android {
 }
 
 dependencies {
+    /* Modules */
+    implementation project(path: ':util')
+
     /* Support */
-    implementation "androidx.appcompat:appcompat:1.1.0"
+    implementation "androidx.appcompat:appcompat:$app_compat_version"
     implementation "androidx.recyclerview:recyclerview:1.0.0"
-    implementation "com.google.android.material:material:1.0.0"
-    implementation "androidx.core:core-ktx:1.1.0"
-    implementation "androidx.fragment:fragment-ktx:1.1.0"
-    implementation "androidx.preference:preference-ktx:1.1.0"
+    implementation "com.google.android.material:material:$material_version"
     implementation "com.android.support.constraint:constraint-layout:1.1.3"
 
+    /* Kotlin */
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    /* Extensions */
+    implementation "androidx.core:core-ktx:$ktx_version"
+    implementation "androidx.fragment:fragment-ktx:$ktx_version"
+    implementation "androidx.preference:preference-ktx:$ktx_version"
+
     /* Lifecycle */
-    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.1.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     /* Database */
-    implementation "androidx.room:room-runtime:2.1.0"
-    kapt "androidx.room:room-compiler:2.1.0"
-
-    /* Kotlin */
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.50'
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     /* Coroutines */
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     /* Twitter */
-    implementation "com.twitter.sdk.android:twitter-core:3.3.0"
-    implementation "com.twitter.sdk.android:tweet-ui:3.3.0"
+    implementation "com.twitter.sdk.android:twitter-core:$twitter_version"
+    implementation "com.twitter.sdk.android:tweet-ui:$twitter_version"
 
     /* Images */
-    implementation "com.github.bumptech.glide:glide:4.9.0"
-    kapt "com.github.bumptech.glide:compiler:4.9.0"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 
     /* Dependency Injection */
-    implementation "org.koin:koin-androidx-scope:2.0.1"
-    implementation "org.koin:koin-androidx-viewmodel:2.0.1"
-    testImplementation "org.koin:koin-test:2.0.1"
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    testImplementation "org.koin:koin-test:$koin_version"
 
     /* Test */
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
 }
