--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,29 @@
 apply plugin: "com.github.ben-manes.versions"
 
 buildscript {
+
+    /* Version */
+    ext.version_code = 1
+    ext.version_name = "1.0.0"
+
+    /* Tools */
+    ext.build_tools_version = "29.0.2"
+    ext.sdk_version = 29
+    ext.sdk_min_version = 25
+
+    /* Libraries */
+    ext.kotlin_version = '1.3.50'
+    ext.ktx_version = '1.1.0'
+    ext.app_compat_version = '1.1.0'
+    ext.app_compat_version = '1.1.0'
+    ext.material_version = '1.0.0'
+    ext.lifecycle_version = '2.1.0'
+    ext.room_version = '2.1.0'
+    ext.coroutines_version = '1.3.1'
+    ext.twitter_version = '3.3.0'
+    ext.glide_version = '4.9.0'
+    ext.koin_version = '2.0.1'
+
     repositories {
         google()
         jcenter()
@@ -9,8 +32,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
-        classpath "com.github.ben-manes:gradle-versions-plugin:0.20.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.25.0"
     }
 }
 
