Extract system classes to separate module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
     /* Modules */
     implementation project(path: ':util')
+    implementation project(path: ':system')
 
     /* Support */
     implementation "androidx.appcompat:appcompat:$app_compat_version"
