--- a/util/build.gradle
+++ b/util/build.gradle
@@ -35,4 +35,8 @@ dependencies {
 
     /* Extensions */
     implementation "androidx.core:core-ktx:$ktx_version"
+
+    /* Coroutines */
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 }
