Improve gradle dependency handling

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,6 @@ org.gradle.daemon=true
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8=true
+android.enableBuildCache=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
