--- a/remote/build.gradle
+++ b/remote/build.gradle
@@ -3,14 +3,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion sdk_version
-    buildToolsVersion build_tools_version
-
+    compileSdkVersion projectConfig.sdk
+    buildToolsVersion projectConfig.tools
     defaultConfig {
-        minSdkVersion sdk_min_version
-        targetSdkVersion sdk_version
-        versionCode version_code
-        versionName version_name
+        minSdkVersion projectConfig.minSdk
+        targetSdkVersion projectConfig.sdk
+        versionCode projectConfig.version
+        versionName projectConfig.code
 
         consumerProguardFiles 'consumer-rules.pro'
 
@@ -31,15 +30,9 @@ android {
 }
 
 dependencies {
-    /* Kotlin */
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-    /* Twitter */
-    api "com.twitter.sdk.android:twitter-core:$twitter_version"
-    api "com.twitter.sdk.android:tweet-ui:$twitter_version"
+    implementation commonDependencies.values()
+    api twitterDependencies.values()
 
-    /* Dependency Injection */
-    implementation "org.koin:koin-androidx-scope:$koin_version"
-    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-    testImplementation "org.koin:koin-test:$koin_version"
+    testImplementation testDependencies.values()
 }
