--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -3,14 +3,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion sdk_version
-    buildToolsVersion build_tools_version
-
+    compileSdkVersion projectConfig.sdk
+    buildToolsVersion projectConfig.tools
     defaultConfig {
-        minSdkVersion sdk_min_version
-        targetSdkVersion sdk_version
-        versionCode version_code
-        versionName version_name
+        minSdkVersion projectConfig.minSdk
+        targetSdkVersion projectConfig.sdk
+        versionCode projectConfig.version
+        versionName projectConfig.code
 
         consumerProguardFiles 'consumer-rules.pro'
     }
@@ -27,20 +26,12 @@ android {
 }
 
 dependencies {
-    /* Kotlin */
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-    /* Lifecycle */
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    implementation commonDependencies.values()
+    implementation lifecycleDependencies.values()
+    implementation roomDependencies.runtime
 
-    /* Database */
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    kapt roomDependencies.compiler
 
-
-    /* Dependency Injection */
-    implementation "org.koin:koin-androidx-scope:$koin_version"
-    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-    testImplementation "org.koin:koin-test:$koin_version"
+    testImplementation testDependencies.values()
 }
