--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion sdk_version
-    buildToolsVersion build_tools_version
+    compileSdkVersion projectConfig.sdk
+    buildToolsVersion projectConfig.tools
     defaultConfig {
         applicationId "com.medo.tweetspie"
-        minSdkVersion sdk_min_version
-        targetSdkVersion sdk_version
-        versionCode version_code
-        versionName version_name
+        minSdkVersion projectConfig.minSdk
+        targetSdkVersion projectConfig.sdk
+        versionCode projectConfig.version
+        versionName projectConfig.code
     }
     buildTypes {
         release {
@@ -31,37 +31,14 @@ dependencies {
     implementation project(path: ':storage')
     implementation project(path: ':remote')
 
-    /* Support */
-    implementation "androidx.appcompat:appcompat:$app_compat_version"
-    implementation "androidx.recyclerview:recyclerview:1.0.0"
-    implementation "com.google.android.material:material:$material_version"
-    implementation "com.android.support.constraint:constraint-layout:1.1.3"
+    implementation commonDependencies.values()
+    implementation extensionsDependencies.values()
+    implementation lifecycleDependencies.values()
+    implementation uiDependencies.values()
+    implementation coroutineDependencies.values()
+    implementation imageDependencies.glide
 
-    /* Kotlin */
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    kapt imageDependencies.glideCompiler
 
-    /* Extensions */
-    implementation "androidx.core:core-ktx:$ktx_version"
-    implementation "androidx.fragment:fragment-ktx:$ktx_version"
-    implementation "androidx.preference:preference-ktx:$ktx_version"
-
-    /* Lifecycle */
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-
-    /* Coroutines */
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-
-    /* Images */
-    implementation "com.github.bumptech.glide:glide:$glide_version"
-    kapt "com.github.bumptech.glide:compiler:$glide_version"
-
-    /* Dependency Injection */
-    implementation "org.koin:koin-androidx-scope:$koin_version"
-    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-    testImplementation "org.koin:koin-test:$koin_version"
-
-    /* Test */
-    testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
+    testImplementation testDependencies.values()
 }
