--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'scripts/dependency.gradle'
 apply plugin: "com.github.ben-manes.versions"
 
 buildscript {
-
-    /* Version */
-    ext.version_code = 1
-    ext.version_name = "1.0.0"
-
-    /* Tools */
-    ext.build_tools_version = "29.0.2"
-    ext.sdk_version = 29
-    ext.sdk_min_version = 25
-
-    /* Libraries */
-    ext.kotlin_version = '1.3.50'
-    ext.ktx_version = '1.1.0'
-    ext.app_compat_version = '1.1.0'
-    ext.app_compat_version = '1.1.0'
-    ext.material_version = '1.0.0'
-    ext.lifecycle_version = '2.1.0'
-    ext.room_version = '2.1.0'
-    ext.coroutines_version = '1.3.1'
-    ext.twitter_version = '3.3.0'
-    ext.glide_version = '4.9.0'
-    ext.koin_version = '2.0.1'
 
     repositories {
         google()
@@ -32,7 +11,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
         classpath "com.github.ben-manes:gradle-versions-plugin:0.25.0"
     }
 }
